Changes
=======

1.0a4 (unreleased)
------------------

- Internationalized the code and added French translation.


1.0a3 (2010-06-25)
------------------

- The GlobalRegistry plugin no longer raises an error when a principalInfo
  is not Found. Instead, it returns None, as specified by IAuthentication.
  Tests have been added to fix that behavior and the PrincipalFolder's one.


1.0a2 (2010-06-25)
------------------

- The PrincipalFolder no longer raises an error when a principalInfo
  is not Found. Instead, it returns None, as specified by
  IAuthentication.


1.0a1 (2010-06-04)
------------------

- Removed unused and illogical rights: "CanLogin" & "CanLogout".

- ``dolmen.app.authentication`` now uses dolmen.menu to create menus and register entries.

- We now use the ``zeam.form`` Form library instead of z3c.form


0.1.1 (2010-05-31)
------------------

- Updated translations.


0.1 (2010-05-30)
----------------

- Initial release.