@@ -20,7 +20,7 @@
   <include package="dolmen.app.site" />
   <include package="dolmen.app.authentication" />
 
-  <includeOverrides package="dolmen.app.layout" file="skin.zcml" />
+  <browser:defaultView name="index" />
 
   <browser:defaultView
       name="index"
